package P7;

public interface Observador {
    void actualizar(String condiciones);
}
